<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="Title">A simple calculator</string>
    <string name="Result">0</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Calculate">=</string>
    <string name="Sum">+</string>
    <string name="Minus">-</string>
    <string name="Divide">/</string>
    <string name="Multiply">*</string>
    <string name="ClearAll">Clear All</string>
    <string name="DeleteLastInput">Delete last input</string>

    
    <string name="ToastMassage">Calculation Done!</string>

    <string name="SettingBar">Settings</string>
    <string name="TitleChangeColor">Title color</string>
    <string name="colorBlue">Change to blue</string>
    <string name="colorRed">Change to red</string>
    <string name="colorGreen">Change to green</string>
    <string name="colorDefault">Change to default</string>



    <string name="lostEsterEgg">RUN!</string>
    <string name="lostEsterEggVal">4+8+15+16+23+42</string>
    <string name="quickMathsEasterEgg">Quick Maths</string>
    <string name="quickMathsEasterEggVal" tools:ignore="TypographyDashes">2+2-1</string>
    <string name="csEasterEgg">FlashBang out!</string>
    <string name="csEasterEggVal">1+3+3+7</string>
    <string name="onPlaceToast">You should not make calculations while being on a plane</string>

</resources>